--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,16 @@
 Package: slimmingDive
 Title: Scripts Collection to Calculate Drift Rate from Southern Elephant Seals
 Version: 0.1.0
-Authors@R: person("Fer", "Arce", email = "fernando.arcegonzalez@utas.edu.au", role = c("aut", "cre"))
+Authors@R: person("Fernando", "Arce", email = "fernando.arcegonzalez@utas.edu.au",
+	   role = c("aut", "cre"))
+	   person("Sophie", "Bestley", email = "sophie.bestley@utas.edu.au",
+    	   role = "ctb"),
+	   person("Clive", "McMahon", email = "clive.mcmahon@utas.edu.au",
+    	   role = "ctb"),
+    	   person("Mark", "hindell",  email = "mark.hindell@utas.edu.au",
+    	   role = "ctb"),
+    	   person("Simon", "Wotherspoon", email = "simon.wotherspoon@utas.edu.au",
+    	   role = c("aut","ctb")
 Description: Handy functions to work with summarized dives profiles by a broken-stick algorithm. These functions are prepared to work with the general format provided by SMRU tags. If you have other source of data feel free to contact.
 Author: Fer Arce [aut, cre]
 Maintainer: Fer Arce <fernando.arcegonzalez@utas.edu.au>
