--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,12 +12,13 @@ Authors@R: person("Fernando", "Arce", email = "fernando.arcegonzalez@utas.edu.au
     	   role = "ctb"),
     	   person("Simon", "Wotherspoon", email = "simon.wotherspoon@utas.edu.au",
     	   role = c("aut","ctb")
-Description: Handy functions to work with summarized dives profiles by a broken-stick algorithm. These functions are prepared to work with the general format provided by SMRU tags. If you have other source of data feel free to contact.
+Description: Handy functions to work with summarized dives profiles by a broken-stick algorithm. These functions are prepared to work with the general format provided by SMRU tags. It has been developed with High resolution Time-Depth profiles and tested with Satellite transmitted  Profiles provided by The Integrated Marine Observing System (IMOS)If you have other source of data feel free to contact.
 Author: Fer Arce [aut, cre]
+	Simon Wotherspoon [aut, cre]
 Maintainer: Fer Arce <fernando.arcegonzalez@utas.edu.au>
 Depends: R (>= 3.3.0)
 Imports: rjags
-License: GLP2
+License: GLP3
 SystemRequirements: JAGS (>= 4.2.0) 
 Encoding: UTF-8
 LazyData: true
