--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,24 +1,18 @@
 Package: slimmingDive
 Type: Package
 Title: Flexible, Hierarchical Selection of Drift Dives
-Version: 0.1.0.0001
-Authors@R: person("Fernando", "Arce", email = "fernando.arcegonzalez@utas.edu.au",
-	   role = c("aut", "cre"))
-	   person("Sophie", "Bestley", email = "sophie.bestley@utas.edu.au",
-    	   role = "ctb"),
-	   person("Clive", "McMahon", email = "clive.mcmahon@utas.edu.au",
-    	   role = "ctb"),
-    	   person("Mark", "hindell",  email = "mark.hindell@utas.edu.au",
-    	   role = "ctb"),
-    	   person("Simon", "Wotherspoon", email = "simon.wotherspoon@utas.edu.au",
-    	   role = c("aut")
-Description: slimingDive contains a set of function for detect and filter drift dives from dive profiles summarized by a broken-stick algorithm. These functions are prepared to work with the general format provided by SMRU tags. It has been developed with High resolution Time-Depth profiles and tested with Satellite transmitted  Profiles provided by If you have other source of data feel free to contact.Example data has kindly provided by the Integrated Marine Observing System (IMOS)
-Author: Fer Arce [aut, cre]
-	Simon Wotherspoon [aut]
+Version: 0.1.0.1
+Authors@R: c(person("Fer", "Arce", email = "fernando.arcegonzalez@utas.edu.au", role = c("aut", "cre")),
+	   person("Sophie", "Bestley", email = "sophie.bestley@utas.edu.au", role = "ctb"),
+	   person("clive", "McMahon", email = "clive.mcmahon@utas.edu.au", role = "ctb"),
+	   person("Mark", "Hindell", email = "mark.hindell@utas.edu.au", role = "ctb"),
+	   person("Simon", "Wotherspoon", email = "simon.wotherspoon@utas.edu.au", role = "aut")
+	   )
+Description: Package slimingDive contains a set of function for detect and filter drift dives from elephant seal dive profiles summarized by a broken-stick algorithm. These functions are prepared to work with the general format provided by SMRU tags. It has been developed with High resolution Time-Depth profiles and tested with Satellite transmitted  Profiles provided by the Australian Integrated Marine Observing System (IMOS). It has not been tested with other species that performs Drift dives so any test is welcome. 
 Maintainer: Fer Arce <fernando.arcegonzalez@utas.edu.au>
 Depends: R (>= 3.3.0)
 Imports: rjags
-License: GLP3
+License: GPL-3 + file LICENSE
 SystemRequirements: JAGS (>= 4.2.0) 
 Encoding: UTF-8
 LazyData: true
