--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,5 @@
 importFrom("graphics", "abline", "clip", "hist", "layout", "plot",
              "points", "text", "par")
-importFrom("stats", "lm", "median", "sd", "cor.test", "spline", "var")
+importFrom("stats", "lm", "median", "sd", "cor.test", "spline", "var", "complete.cases")
 importFrom("utils", "read.csv")
 exportPattern("^[^\\.]")
