--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,9 @@ Maintainer: Fer Arce <fernando.arcegonzalez@utas.edu.au>
 Depends: R (>= 3.3.0)
 Imports: rjags
 License: GPL-3 + file LICENSE
-SystemRequirements: JAGS (>= 4.2.0) 
+SystemRequirements: JAGS (>= 4.2.0)
+URL: https://github.com/farcego/slimmingDive
+BugReports: https://github.com/farcego/slimmingDive/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
