--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R: c(person("Fer", "Arce", email = "fernando.arcegonzalez@utas.edu.au", 
 	   person("Simon", "Wotherspoon", email = "simon.wotherspoon@utas.edu.au", role = "aut")
 	   )
 Description: Package slimingDive contains a set of function for detect and filter drift dives from elephant seal dive profiles summarized by a broken-stick algorithm. These functions are prepared to work with the general format provided by SMRU tags. It has been developed with High resolution Time-Depth profiles and tested with Satellite transmitted  Profiles provided by the Australian Integrated Marine Observing System (IMOS). It has not been tested with other species that performs Drift dives so any test is welcome. 
-Maintainer: Fer Arce <fernando.arcegonzalez@utas.edu.au>
+Maintainer: Fer Arce <farcego@gmail.comu>
 Depends: R (>= 3.3.0)
 Imports: rjags
 License: GPL-3 + file LICENSE
