--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,8 @@ Description: Package slimingDive contains a set of function for detect and filte
 Maintainer: Fer Arce <farcego@gmail.com>
 Depends: R (>= 3.3.0)
 Imports:
-rjags,
-gam,
+	rjags,
+	gam
 License: GPL-3 + file LICENSE
 SystemRequirements: JAGS (>= 4.2.0)
 URL: https://github.com/farcego/slimmingDive
