--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ importFrom("stats", "lm", "median", "sd", "cor.test", "spline", "var", "complete
 importFrom("utils", "read.csv")
 importFrom("grDevices", "adjustcolor")
 importFrom("gam", "gam")
+importFrom("parallel","makeCluster", "clusterExport", "clusterApply", "stopCluster")
 export(driftFilter)
 export(formatDives)
 export(kalman)
