jags functions exported
jags.model and coda.samples are now exported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ importFrom("utils", "read.csv")
 importFrom("grDevices", "adjustcolor")
 importFrom("gam", "gam")
 importFrom("parallel","makeCluster", "clusterExport", "clusterApply", "stopCluster")
+importFrom("rjags", "jags.model", "coda.samples")
 export(driftFilter)
 export(formatDives)
 export(kalman)
